deployment/marafonet/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-app-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: gin-app-tls-secret # TODO: set up secret inside cluster
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gin-app-service
            port:
              number: 8080
